<resources>
    <string name="app_name">BasicCalC</string>
    
    <string name="paranthesses">( )</string>
    <string name="power">^</string>
    <string name="div">÷</string>
    <string name="allclear">C</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="pro">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sub">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="plusminus">±</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="backsapce">BClear</string>
    <string name="hint">Please Enter Your Input</string>


</resources>